Developer/src/objects/PlanSearchCriteria__c.object
<CustomObject>
    <fields>
        <fullName>AccountDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountDirector</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalCondition__c</fullName>
        <label>追加条件</label>
        <picklist>
            <picklistValues>
                <fullName>特別企画</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>メッセージクーポン</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>カードプログラム</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>予備券</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ポップ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>チラシ連動</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AwardFrom__c</fullName>
        <label>AwardFrom</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardTo__c</fullName>
        <label>AwardTo</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CardProgram__c</fullName>
        <label>カードプログラム</label>
        <picklist>
            <picklistValues>
                <fullName>どちらも</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>なし</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>カテゴリ</label>
        <referenceTo>CategoryMaster__c</referenceTo>
        <relationshipLabel>企画検索条件</relationshipLabel>
        <relationshipName>Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <label>Chain</label>
        <picklist>
            <picklistValues>
                <fullName>1 : イオン</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 : イトーヨーカドー</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4：イオンキミサワ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7：Sローゼン</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8：イズミ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9：カスミ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11：オークワ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12：ユニー</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13：エコス</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14：万代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15：フジ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16：ベイシア</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17：原信ナルス</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18：ライフ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20：MV東北</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21：MV北海道</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22：MV西日本</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23：イオン九州</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25：イオン北海道</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26：光洋</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27：MV東海</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28：MV九州</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29：MV中部</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30：ヨークベニマル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35：ダイエー</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36：グルメC関東</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37：グルメC近畿</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40：MV北東北</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41：MV南東北</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42：MV関東</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CheckCard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckMainAlt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckMainAlt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckMax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckMax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckMessage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckPop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckPop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckTime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckUnlimited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckUnlimited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckYobiken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckYobiken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckChirashi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chrashi__c</fullName>
        <label>チラシ連動</label>
        <picklist>
            <picklistValues>
                <fullName>どちらも</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>なし</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>クライアント</label>
        <referenceTo>ClientMaster__c</referenceTo>
        <relationshipLabel>企画検索条件</relationshipLabel>
        <relationshipName>Client</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CluFrom__c</fullName>
        <label>CluFrom</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CluTo__c</fullName>
        <label>CluTo</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clu__c</fullName>
        <label>Clu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CouponBarcode__c</fullName>
        <label>クーポン バーコード</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CouponTypeB__c</fullName>
        <label>CouponTypeB_</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>サイクル</label>
        <picklist>
            <picklistValues>
                <fullName>301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>302</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>303</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>304</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>306</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>307</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>308</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>309</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>312</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExpireFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>発券終了フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoodsText__c</fullName>
        <inlineHelpText>「*」であいまい検索が実行できます</inlineHelpText>
        <label>対象商品名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageNumber__c</fullName>
        <label>ImageNumber</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KikakuText__c</fullName>
        <inlineHelpText>「*」であいまい検索が実行できます</inlineHelpText>
        <label>企画名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McluFrom__c</fullName>
        <label>McluFrom</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McluTo__c</fullName>
        <label>McluTo</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mclu__c</fullName>
        <label>Mclu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MessageCoupon__c</fullName>
        <label>メッセージクーポン</label>
        <picklist>
            <picklistValues>
                <fullName>どちらも</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>なし</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrderAmountFrom__c</fullName>
        <label>OrderAmountFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderAmountTo__c</fullName>
        <label>OrderAmountTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pop__c</fullName>
        <label>ポップ</label>
        <picklist>
            <picklistValues>
                <fullName>どちらも</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>なし</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrefixCycle__c</fullName>
        <label>PrefixCycle</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResultFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>結果フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>セールス</label>
        <referenceTo>SalesMaeter__c</referenceTo>
        <relationshipLabel>企画検索条件</relationshipLabel>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SearchClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>顧客</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>企画検索条件</relationshipLabel>
        <relationshipName>SearchClient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SearchDateDD__c</fullName>
        <label>検索日付(日)From</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SearchDateMM__c</fullName>
        <label>検索日付(月)From</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SearchDateToDD__c</fullName>
        <label>検索日付(日)To</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SearchDateToMM__c</fullName>
        <label>検索日付(月)To</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SearchDateToYYYY__c</fullName>
        <label>検索日付(年)To</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SearchDateYYYY__c</fullName>
        <label>検索日付(年)From</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpecialProgram__c</fullName>
        <label>特別企画</label>
        <picklist>
            <picklistValues>
                <fullName>どちらも</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>なし</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TriggerAmountFrom__c</fullName>
        <label>TriggerAmountFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TriggerAmountTo__c</fullName>
        <label>TriggerAmountTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TriggerNumFrom__c</fullName>
        <label>TriggerNumFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggerNumTo__c</fullName>
        <label>TriggerNumTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yobiken__c</fullName>
        <label>予備券</label>
        <picklist>
            <picklistValues>
                <fullName>どちらも</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>なし</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>checkSpecial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>特別企画</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chkMakerAndRetail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>chkMakerAndRetail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chkMaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>chkMaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chkRetail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>chkRetail</label>
        <type>Checkbox</type>
    </fields>
    <label>企画検索条件</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>企画検索条件名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>